# serializer version: 1
# name: TestDCMRefresh.test_refresh_with_fresh_tables
  '''
  UP-TO-DATE        0       0 JW_DCM_TESTALL.ANALYTICS.DYNAMIC_EMPLOYEES
  
  1 Dynamic Table refreshed successfully.
  ================================================================================
  
  '''
# ---
# name: TestDCMRefresh.test_refresh_with_no_dynamic_tables
  '''
  
  No dynamic tables found in the project.
  ================================================================================
  
  '''
# ---
# name: TestDCMRefresh.test_refresh_with_outdated_tables
  '''
  REFRESHED    +12.3k   -999B JW_DCM_TESTALL.ANALYTICS.DYNAMIC_EMPLOYEES
  
  1 Dynamic Table refreshed successfully.
  ================================================================================
  
  '''
# ---
# name: TestDCMTest.test_test_all_passing
  '''
  ✓ PASS      DB.SCHEMA.EMPLOYEES (ROW_COUNT_CHECK)
  ✓ PASS      DB.SCHEMA.ORDERS (NULL_CHECK)
  
  Ran 2 data quality tests: 2 passed, 0 failed expectations.
  ================================================================================
  
  '''
# ---
# name: TestDCMTest.test_test_no_expectations
  '''
  
  No expectations found in the project.
  ================================================================================
  
  '''
# ---
# name: TestDCMTest.test_test_with_failures
  '''
  ✓ PASS      DB.SCHEMA.EMPLOYEES (ROW_COUNT_CHECK)
  ✗ FAIL      DB.SCHEMA.ORDERS (NULL_CHECK)
    └─ Expected: = 0, Got: 15 (Metric: null_count)
  
  Ran 2 data quality tests: 1 passed, 1 failed expectation.
  ================================================================================
  
  '''
# ---
